fix image stretching

--- a/assets/style.css
+++ b/assets/style.css
@@ -121,7 +121,7 @@ It has a horizontal margin of 1vw on both sides, providing some spacing between 
 
 
 #portrait-img {
-    width: 13vw;
+    width: 17vw;
     height: 18vw;
     margin-inline: 1vw;
     background-size: cover;
